Made module system. Finally it fucking works